Osano Cookie consent

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="https://player.vimeo.com/api/player.js"></script>
+
+  <script src="https://cmp.osano.com/AzqabgTNMPDMouT/31f48651-1eda-47d5-8127-748b521e74c5/osano.js"></script>
 </head>
 <body>
   <app-root></app-root>
